# nn-transcribe

./: .CMakeLists.txt.swo  .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/nn_midi_clean/: main.cpp
apps/nn_transcribe/: main.cpp
cmake/: OnnxRuntime.cmake
docs/: ARCHITECTURE.md  CODEX.md  STATIC_LINKING.md  TROUBLESHOOTING.md  USAGE.md
nn_core/include/nn_core/: audio.h  midi_writer.h
nn_core/src/: audio.cpp  midi_writer.cpp
nn_model/: BasicPitch.cpp  BasicPitchCNN.cpp  BasicPitchCNN.h  Features.cpp  Features.h  ModelAssets.cpp  ModelAssets.h  NoteUtils.h  Notes.h
scripts/: build.sh  get_onnxruntime.sh  test_midi_clean.sh
